🩹 Fix PRIM #myBad (2)